# pls-module

./: .gitignore  README.md  main.py  pyproject.toml
pls_module/: __init__.py  main.py  plsmanager.py  plsmodule.py
pls_module/modeler/: __init__.py  modelcreator.py
pls_module/preprocessing/: preprocessor.py
pls_module/spectra_parser/: __init__.py  dataorganizer.py  dataselector.py  opener.py  pls.py
src/: main.py
src/pls_module/: __init__.py
src/pls_module/modeler/: modelcreator.py
src/spectra_parser/: __init__.py
tests/: test_data.csv
