[project]
name = "pls-module"
version = "0.1.0"
description = "Module for using IPLS with peak-selection feature to spectral data."
authors = [
    {name = "Adrian Merino",email = "adrianfcmerino@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "brukeropusreader (>=1.3.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
